navigation list added

--- a/First-HTML.html
+++ b/First-HTML.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="First-CSS.css">
-    <title>Your Website Title</title>
+    <title>KuunCun's BokTok HTML-CSS Homework</title>
 </head>
 <body>
 <header>
-    <h1>Your Website Header</h1>
+    <h1>Welcome to KuunCun's WebSite PlayGround</h1>
 </header>
 
-    <tagName attribute_name="attribute_value"></tagName>
-    <h2 title="This is a subheading">Hello, World!</h2>
+<nav> <!-- href linkleri atanmadı, boş duruyor -->
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About Me</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
+</nav>
+
 <main>
     <section>
         <h2>Main Content Section</h2>
@@ -21,7 +27,7 @@
 </main>
 
 <footer>
-    <p>&copy; 2023 Your Website</p>
+    <p>&copy; 2023 Kuun Cun</p>
     <p>you can click on this <a href="https://github.com/KuunCun/tester_repo">link</a> to access the open source code of this site</p>
 
 </footer>
